--- a/src/frames/index/1.html
+++ b/src/frames/index/1.html
@@ -12,13 +12,15 @@
       1 is the first number in Arabic numerals. Some of the articles that start
       with 1:
     </div>
-    <li><a href="./1/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./1/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./1/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./1/0.html" draggable="false">1 + 2 + 3 + 4 + ⋯</a></li>
     <li>
-      <a href="./1/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./1/1.html" draggable="false"
+        >1,3-Difluoro-trisulfane-1,1-difluoride</a
+      >
     </li>
-    <li><a href="./1/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./1/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./1/2.html" draggable="false">1701</a></li>
+    <li>
+      <a href="./1/3.html" draggable="false">1–5 Pillory Street, Nantwich</a>
+    </li>
   </body>
 </html>
