--- a/src/frames/index/2.html
+++ b/src/frames/index/2.html
@@ -12,13 +12,11 @@
       2 is the second number in Arabic numerals. Some of the articles that start
       with 2:
     </div>
-    <li><a href="./2/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./2/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./2/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./2/0.html" draggable="false">2-inch quadruplex</a></li>
+    <li><a href="./2/1.html" draggable="false">2+1 road</a></li>
+    <li><a href="./2/2.html" draggable="false">2,1,3-Benzothiadiazole</a></li>
     <li>
-      <a href="./2/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./2/3.html" draggable="false">25th century BC</a>
     </li>
-    <li><a href="./2/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./2/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
