--- a/src/frames/index/3.html
+++ b/src/frames/index/3.html
@@ -12,13 +12,16 @@
       3 is the third number in Arabic numerals. Some of the articles that start
       with 3:
     </div>
-    <li><a href="./3/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./3/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./3/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./3/0.html" draggable="false">3</a></li>
     <li>
-      <a href="./3/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./3/1.html" draggable="false">3 ft gauge rail modelling</a>
     </li>
-    <li><a href="./3/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./3/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./3/2.html" draggable="false">3,000 mile myth</a></li>
+    <li>
+      <a href="./3/3.html" draggable="false">3000 metres steeplechase</a>
+    </li>
+    <li>
+      <a href="./3/4.html" draggable="false">3,4,5-Trimethoxybenzaldehyde</a>
+    </li>
   </body>
 </html>
