--- a/src/frames/index/4.html
+++ b/src/frames/index/4.html
@@ -12,13 +12,11 @@
       4 is the fourth number in Arabic numerals. Some of the articles that start
       with 4:
     </div>
-    <li><a href="./4/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./4/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./4/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./4/0.html" draggable="false">4′33″</a></li>
+    <li><a href="./4/1.html" draggable="false">4,294,967,295</a></li>
+    <li><a href="./4/2.html" draggable="false">4-1000A</a></li>
     <li>
-      <a href="./4/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./4/3.html" draggable="false">4D film</a>
     </li>
-    <li><a href="./4/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./4/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
