--- a/src/frames/index/L.html
+++ b/src/frames/index/L.html
@@ -9,8 +9,8 @@
   <body>
     <h1>Articles starting with L</h1>
     <div>
-      L is the 12th letter in the modern English alphabet. Some of the articles
-      that start with L:
+      L is the dozenth letter in the modern English alphabet. Some of the
+      articles that start with L:
     </div>
     <li><a href="./L/0.html" draggable="false">La Grève-sur-Mignon</a></li>
     <li>
