--- a/src/frames/index/T.html
+++ b/src/frames/index/T.html
@@ -8,14 +8,17 @@
 
   <body>
     <h1>Articles starting with T</h1>
-    <div>Some of the articles that start with T:</div>
-    <li><a href="./T/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./T/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./T/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      T is the 20th letter in the modern English alphabet. Some of the articles
+      that start with T:
+    </div>
+    <li><a href="./T/0.html" draggable="false">Tantalum</a></li>
+    <li><a href="./T/1.html" draggable="false">Tczew railway station</a></li>
+    <li><a href="./T/2.html" draggable="false">Tequila</a></li>
     <li>
-      <a href="./T/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./T/3.html" draggable="false">Tim Verfaillie</a>
     </li>
-    <li><a href="./T/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./T/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./T/4.html" draggable="false">Tjasker</a></li>
+    <li><a href="./T/5.html" draggable="false">Tmesiphantes uru</a></li>
   </body>
 </html>
