--- a/src/frames/index/W.html
+++ b/src/frames/index/W.html
@@ -8,14 +8,15 @@
 
   <body>
     <h1>Articles starting with W</h1>
-    <div>Some of the articles that start with W:</div>
-    <li><a href="./W/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./W/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./W/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      W is the 23rd letter in the modern English alphabet. Some of the articles
+      that start with W:
+    </div>
+    <li><a href="./W/0.html" draggable="false">Waalseilandsgracht</a></li>
+    <li><a href="./W/1.html" draggable="false">Wckr Spgt</a></li>
+    <li><a href="./W/2.html" draggable="false">WDR VERA</a></li>
     <li>
-      <a href="./W/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./W/3.html" draggable="false">Wzonka-Lad</a>
     </li>
-    <li><a href="./W/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./W/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
