--- a/src/frames/index/X.html
+++ b/src/frames/index/X.html
@@ -8,14 +8,15 @@
 
   <body>
     <h1>Articles starting with X</h1>
-    <div>Some of the articles that start with X:</div>
-    <li><a href="./X/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./X/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./X/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      X is the 24th letter in the modern English alphabet. Some of the articles
+      that start with X:
+    </div>
+    <li><a href="./X/0.html" draggable="false">XBAND</a></li>
+    <li><a href="./X/1.html" draggable="false">Xlendi Tower</a></li>
+    <li><a href="./X/2.html" draggable="false">Xstrata</a></li>
     <li>
-      <a href="./X/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./X/3.html" draggable="false">Xylanimonas cellulosilytica</a>
     </li>
-    <li><a href="./X/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./X/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
