--- a/src/frames/index/Y.html
+++ b/src/frames/index/Y.html
@@ -8,14 +8,17 @@
 
   <body>
     <h1>Articles starting with Y</h1>
-    <div>Some of the articles that start with Y:</div>
-    <li><a href="./Y/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./Y/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./Y/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      Y is the 25th letter in the modern English alphabet. Some of the articles
+      that start with Y:
+    </div>
     <li>
-      <a href="./Y/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./Y/0.html" draggable="false">YaYa's Flame Broiled Chicken</a>
     </li>
-    <li><a href="./Y/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./Y/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./Y/1.html" draggable="false">YBP 1194</a></li>
+    <li><a href="./Y/2.html" draggable="false">Ydre Municipality</a></li>
+    <li>
+      <a href="./Y/3.html" draggable="false">YES and YAS assay</a>
+    </li>
   </body>
 </html>
