--- a/src/frames/index/U.html
+++ b/src/frames/index/U.html
@@ -8,14 +8,16 @@
 
   <body>
     <h1>Articles starting with U</h1>
-    <div>Some of the articles that start with U:</div>
-    <li><a href="./U/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./U/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./U/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      U is the 21st letter in the modern English alphabet. Some of the articles
+      that start with U:
+    </div>
+    <li><a href="./U/0.html" draggable="false">Ubach over Worms</a></li>
+    <li><a href="./U/1.html" draggable="false">Ucayali moist forests</a></li>
+    <li><a href="./U/2.html" draggable="false">Ujazdów Castle</a></li>
     <li>
-      <a href="./U/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./U/3.html" draggable="false">Un'alma innamorata</a>
     </li>
-    <li><a href="./U/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./U/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./U/4.html" draggable="false">Uxellodunum</a></li>
   </body>
 </html>
