Updated till before symbols

--- a/src/frames/crc.html
+++ b/src/frames/crc.html
@@ -13,8 +13,8 @@
       partially damaged. Please inform your supervisor to acquire an updated
       file.
       <br /><br />In the meantime: entries listed in the side bar (except for
-      Random Page) are stored in a separate database, so they are not affected.
-      Please try reading some of those instead.
+      Random Article) are stored in a separate database, so they are not
+      affected. Please try reading some of those instead.
     </div>
     <!-- <button>Test</button> -->
   </body>
