--- a/src/frames/howtouse.html
+++ b/src/frames/howtouse.html
@@ -24,7 +24,7 @@
       contains more articles than what's listed in the index.
     </p>
     <p>
-      If you are feeling especially adventurous, try clicking on the Random Page
+      If you are feeling especially adventurous, try clicking on Random Article
       at the bottom of the sidebar.
     </p>
 
