--- a/src/frames/index/0.html
+++ b/src/frames/index/0.html
@@ -23,5 +23,8 @@
     <li><a href="./0/8.html" draggable="false">0.999...</a></li>
     <li><a href="./0/9.html" draggable="false">0-dimensional space</a></li>
     <li><a href="./0/10.html" draggable="false">0-point energy</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
