--- a/src/frames/index/1.html
+++ b/src/frames/index/1.html
@@ -22,5 +22,8 @@
     <li>
       <a href="./1/3.html" draggable="false">1–5 Pillory Street, Nantwich</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
