--- a/src/frames/index/3.html
+++ b/src/frames/index/3.html
@@ -23,5 +23,8 @@
     <li>
       <a href="./3/4.html" draggable="false">3,4,5-Trimethoxybenzaldehyde</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
