--- a/src/frames/index/5.html
+++ b/src/frames/index/5.html
@@ -12,13 +12,19 @@
       5 is the fifth number in Arabic numerals. Some of the articles that start
       with 5:
     </div>
-    <li><a href="./5/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./5/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./5/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./5/0.html" draggable="false">5-8 Club</a></li>
+    <li><a href="./5/1.html" draggable="false">5-Con triangles</a></li>
     <li>
-      <a href="./5/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./5/2.html" draggable="false"
+        >50,000,000 Elvis Fans Can't Be Wrong: Elvis' Gold Records, Volume 2</a
+      >
     </li>
-    <li><a href="./5/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./5/5.html" draggable="false">Azithromycin</a></li>
+    <li>
+      <a href="./5/3.html" draggable="false">50-metre penalty</a>
+    </li>
+    <li><a href="./5/4.html" draggable="false">517 Edith</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
