--- a/src/frames/index/7.html
+++ b/src/frames/index/7.html
@@ -12,13 +12,14 @@
       7 is the seventh number in Arabic numerals. Some of the articles that
       start with 7:
     </div>
-    <li><a href="./7/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./7/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./7/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./7/0.html" draggable="false">7-bone roast</a></li>
+    <li><a href="./7/1.html" draggable="false">7. juni-plassen</a></li>
+    <li><a href="./7/2.html" draggable="false">7/16 DIN connector</a></li>
     <li>
-      <a href="./7/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./7/3.html" draggable="false">7400-series integrated circuits</a>
     </li>
-    <li><a href="./7/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./7/5.html" draggable="false">Azithromycin</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
