--- a/src/frames/index/A.html
+++ b/src/frames/index/A.html
@@ -22,8 +22,11 @@
     <li><a href="./A/5.html" draggable="false">Ajaloomuuseum</a></li>
     <li><a href="./A/6.html" draggable="false">Aldynes</a></li>
     <li><a href="./A/7.html" draggable="false">Avaldsnes (municipality)</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
-  <script>
+  <!-- <script>
     const { ipcRenderer, remote } = require("electron");
-  </script>
+  </script> -->
 </html>
