--- a/src/frames/index/B.html
+++ b/src/frames/index/B.html
@@ -28,5 +28,8 @@
       <a href="./B/6.html" draggable="false">Billiard Congress of America</a>
     </li>
     <li><a href="./B/7.html" draggable="false">Blabia truncata</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
