--- a/src/frames/index/C.html
+++ b/src/frames/index/C.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with C</h1>
-    <div>C is the third letter in the modern English alphabet. Some of the articles that start with C:</div>
+    <div>
+      C is the third letter in the modern English alphabet. Some of the articles
+      that start with C:
+    </div>
     <li><a href="./C/0.html" draggable="false">CAMK</a></li>
     <li><a href="./C/1.html" draggable="false">cc:Mail</a></li>
     <li><a href="./C/2.html" draggable="false">CD single</a></li>
@@ -23,5 +26,8 @@
     <li><a href="./C/5.html" draggable="false">Chen Changxing</a></li>
     <li><a href="./C/6.html" draggable="false">Clabber (food)</a></li>
     <li><a href="./C/7.html" draggable="false">Cnemarchus erythropygius</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
