--- a/src/frames/index/D.html
+++ b/src/frames/index/D.html
@@ -27,5 +27,8 @@
     <li><a href="./D/6.html" draggable="false">Dlouhoňovice</a></li>
     <li><a href="./D/7.html" draggable="false">Dnestrovskiye melodii</a></li>
     <li><a href="./D/8.html" draggable="false">Dypsis decaryi</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
