--- a/src/frames/index/F.html
+++ b/src/frames/index/F.html
@@ -24,5 +24,8 @@
     </li>
     <li><a href="./F/4.html" draggable="false">Fu'an dialect</a></li>
     <li><a href="./F/5.html" draggable="false">fx-7000G</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
