--- a/src/frames/index/G.html
+++ b/src/frames/index/G.html
@@ -25,5 +25,8 @@
     <li>
       <a href="./G/6.html" draggable="false">Günther's dwarf burrowing skink</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
