--- a/src/frames/index/H.html
+++ b/src/frames/index/H.html
@@ -25,5 +25,8 @@
     <li><a href="./H/6.html" draggable="false">Hotteok</a></li>
     <li><a href="./H/7.html" draggable="false">hr-Bigband</a></li>
     <li><a href="./H/8.html" draggable="false">Hvalfjörður Tunnel</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
