--- a/src/frames/index/I.html
+++ b/src/frames/index/I.html
@@ -25,5 +25,8 @@
     <li><a href="./I/4.html" draggable="false">Iquiracetima aspasia</a></li>
     <li><a href="./I/5.html" draggable="false">It's a Sin</a></li>
     <li><a href="./I/6.html" draggable="false">Ixerba</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
