--- a/src/frames/index/J.html
+++ b/src/frames/index/J.html
@@ -23,5 +23,8 @@
     <li><a href="./J/4.html" draggable="false">Jpred</a></li>
     <li><a href="./J/5.html" draggable="false">Juaari</a></li>
     <li><a href="./J/6.html" draggable="false">Jydegaard Formation</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
