--- a/src/frames/index/K.html
+++ b/src/frames/index/K.html
@@ -20,5 +20,8 @@
     </li>
     <li><a href="./K/4.html" draggable="false">Kjeldahl method</a></li>
     <li><a href="./K/5.html" draggable="false">Klaberjass</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
