--- a/src/frames/index/L.html
+++ b/src/frames/index/L.html
@@ -22,5 +22,8 @@
     <li>
       <a href="./L/3.html" draggable="false">Lhen Coan</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
