--- a/src/frames/index/N.html
+++ b/src/frames/index/N.html
@@ -22,7 +22,14 @@
     <li>
       <a href="./N/3.html" draggable="false">Njai Dasima</a>
     </li>
-    <li><a href="./N/4.html" draggable="false">Nkenda–Mpondwe–Beni High Voltage Power Line</a></li>
+    <li>
+      <a href="./N/4.html" draggable="false"
+        >Nkenda–Mpondwe–Beni High Voltage Power Line</a
+      >
+    </li>
     <li><a href="./N/5.html" draggable="false">NmVac4-A/C/Y/W-135</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
