--- a/src/frames/index/O.html
+++ b/src/frames/index/O.html
@@ -18,5 +18,8 @@
     <li>
       <a href="./O/3.html" draggable="false">Où sont-elles passées</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
