--- a/src/frames/index/P.html
+++ b/src/frames/index/P.html
@@ -21,5 +21,8 @@
       <a href="./P/3.html" draggable="false">Plac Konstytucji metro station</a>
     </li>
     <li><a href="./P/4.html" draggable="false">Procrastination</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
