--- a/src/frames/index/Q.html
+++ b/src/frames/index/Q.html
@@ -18,5 +18,8 @@
     <li>
       <a href="./Q/3.html" draggable="false">Qijian Xia Tianshan</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
