--- a/src/frames/index/R.html
+++ b/src/frames/index/R.html
@@ -27,5 +27,8 @@
         >Rt. Hon. William Saunders Sebright Lascelles</a
       >
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
