--- a/src/frames/index/S.html
+++ b/src/frames/index/S.html
@@ -21,5 +21,8 @@
     <li><a href="./S/4.html" draggable="false">Shoegaze</a></li>
     <li><a href="./S/5.html" draggable="false">Själagårdsgatan</a></li>
     <li><a href="./S/5.html" draggable="false">Ska stroke</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
