--- a/src/frames/index/Symbol.html
+++ b/src/frames/index/Symbol.html
@@ -19,5 +19,8 @@
     </li>
     <li><a href="./Symbol/4.html" draggable="false">Antimatter</a></li>
     <li><a href="./Symbol/5.html" draggable="false">Azithromycin</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
