--- a/src/frames/index/T.html
+++ b/src/frames/index/T.html
@@ -20,5 +20,8 @@
     </li>
     <li><a href="./T/4.html" draggable="false">Tjasker</a></li>
     <li><a href="./T/5.html" draggable="false">Tmesiphantes uru</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
