--- a/src/frames/index/U.html
+++ b/src/frames/index/U.html
@@ -19,5 +19,8 @@
       <a href="./U/3.html" draggable="false">Un'alma innamorata</a>
     </li>
     <li><a href="./U/4.html" draggable="false">Uxellodunum</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
