--- a/src/frames/index/V.html
+++ b/src/frames/index/V.html
@@ -15,5 +15,8 @@
     <li><a href="./V/0.html" draggable="false">Vaalbara</a></li>
     <li><a href="./V/1.html" draggable="false">Veazie Bank v. Fenno</a></li>
     <li><a href="./V/2.html" draggable="false">Vrachesh Glacier</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
