--- a/src/frames/index/X.html
+++ b/src/frames/index/X.html
@@ -18,5 +18,8 @@
     <li>
       <a href="./X/3.html" draggable="false">Xylanimonas cellulosilytica</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
