--- a/src/frames/index/Y.html
+++ b/src/frames/index/Y.html
@@ -20,5 +20,8 @@
     <li>
       <a href="./Y/3.html" draggable="false">YES and YAS assay</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
