--- a/src/frames/index/Z.html
+++ b/src/frames/index/Z.html
@@ -15,5 +15,8 @@
     <li><a href="./Z/0.html" draggable="false">Zc(3900)</a></li>
     <li><a href="./Z/1.html" draggable="false">Zero Gravity Corporation</a></li>
     <li><a href="./Z/2.html" draggable="false">Zinc finger</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
