--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
                 </ul>
               </details>
             </li> -->
-            <li id="mainListRandomPage">Random Page</li>
+            <li id="mainListRandomPage">Random Article</li>
             <!-- <li>Licenses</li> -->
           </ul>
 
