--- a/src/frames/index/2.html
+++ b/src/frames/index/2.html
@@ -18,5 +18,8 @@
     <li>
       <a href="./2/3.html" draggable="false">25th century BC</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
