--- a/src/frames/index/4.html
+++ b/src/frames/index/4.html
@@ -18,5 +18,8 @@
     <li>
       <a href="./4/3.html" draggable="false">4D film</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
