--- a/src/frames/index/6.html
+++ b/src/frames/index/6.html
@@ -12,13 +12,13 @@
       6 is the sixth number in Arabic numerals. Some of the articles that start
       with 6:
     </div>
-    <li><a href="./6/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./6/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./6/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./6/0.html" draggable="false">60-yard dash</a></li>
+    <li><a href="./6/1.html" draggable="false">6042 Cheshirecat</a></li>
     <li>
-      <a href="./6/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./6/2.html" draggable="false">63rd New York State Legislature</a>
     </li>
-    <li><a href="./6/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./6/5.html" draggable="false">Azithromycin</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
