--- a/src/frames/index/8.html
+++ b/src/frames/index/8.html
@@ -12,13 +12,14 @@
       8 is the eighth number in Arabic numerals. Some of the articles that start
       with 8:
     </div>
-    <li><a href="./8/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./8/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./8/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./8/0.html" draggable="false">8-orthoplex</a></li>
+    <li><a href="./8/1.html" draggable="false">806 Gyldénia</a></li>
+    <li><a href="./8/2.html" draggable="false">84th Grey Cup</a></li>
     <li>
-      <a href="./8/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./8/3.html" draggable="false">8 Hours of Portimão</a>
     </li>
-    <li><a href="./8/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./8/5.html" draggable="false">Azithromycin</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
