--- a/src/frames/index/9.html
+++ b/src/frames/index/9.html
@@ -12,13 +12,14 @@
       9 is the ninth number in Arabic numerals. Some of the articles that start
       with 9:
     </div>
-    <li><a href="./9/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./9/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./9/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./9/0.html" draggable="false">9(1)(h) order</a></li>
+    <li><a href="./9/1.html" draggable="false">900</a></li>
+    <li><a href="./9/2.html" draggable="false">930 Fifth Avenue</a></li>
     <li>
-      <a href="./9/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./9/3.html" draggable="false">95th/Dan Ryan station</a>
     </li>
-    <li><a href="./9/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./9/5.html" draggable="false">Azithromycin</a></li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
