--- a/src/frames/index/E.html
+++ b/src/frames/index/E.html
@@ -25,5 +25,8 @@
         >Es ist nichts Gesundes an meinem Leibe, BWV 25</a
       >
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
