--- a/src/frames/index/M.html
+++ b/src/frames/index/M.html
@@ -33,5 +33,8 @@
     <li>
       <a href="./M/6.html" draggable="false">Motorola International 3200</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
