--- a/src/frames/index/W.html
+++ b/src/frames/index/W.html
@@ -18,5 +18,8 @@
     <li>
       <a href="./W/3.html" draggable="false">Wzonka-Lad</a>
     </li>
+    <div>
+      Out of ideas? Check out the Random Aritcle section on the sidebar.
+    </div>
   </body>
 </html>
